# HyperGraph

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: buildpackage.yml  ci.yml  publish.yml  pythonpublish.yml
include/hypergraph/: counting.h  eigen.h  hypergraph.h
scripts/: repair-wheel.sh
src/: Module.cpp
tests/: TestHyperGraph.py
